Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30283

Crash when double-clicking on an invalid bookmark in bookmark list

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 12.0.2
    • Qt Creator 12.0.1
    • Editors
    • None
    • Windows
    • 9296a7fb9 (12.0), a45f058a3 (12.0)

    Description

      When you open the bookmark list ("Bookmarks") and double-click an invalid bookmark, Qt Creator crashes.

      Steps to reproduce:

      1. Create a text file and add some lines of text
      2. Open in Creator
      3. Set a bookmark
      4. Close the file
      5. Verify that you can navigate to the bookmark - Works
      6. Close the file again
      7. Delete the file
      8. Try to navigate to the bookmark --> CRASH

      In course of multiple such crashes, I also lost all of my  bookmarks (most of which were definitely still valid)

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-30283
        # Subject Branch Project Status CR V

        Activity

          People

            davschul David Schulz
            asperamanca Robert Schimkowitsch
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes